[tool.poetry]
name = "wfc"
version = "0.1.0"
description = "A compact and verbose implementation of the wave function collapse algorithm in Python."
license = "MIT"
authors = ["Umut Güçlü <u.guclu@donders.ru.nl>"]
readme = "README.md"
packages = [{include = "wfc"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
